- Updated documentation - Updated mysql global settings to allow for zero-dates which tests use